2018-04-10  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_has_feature): Renamed to...
	(riscv_isa_has_feature): ...this.  Update comments.
	(riscv_abi_has_feature): New function.
	(show_use_compressed_breakpoints): Update for
	riscv_isa_has_feature name change.
	(riscv_isa_xlen): Now calls riscv_abi_xlen, old implementation
	moved to...
	(riscv_abi_xlen): ...this new function.
	(riscv_abi_flen): New function.
	(riscv_isa_flen): Update to call riscv_isa_has_feature.
	(riscv_has_fp_abi): Rename to...
	(riscv_abi_any_float_p): ...this.
	(riscv_breakpoint_kind_from_pc): Update to call
	riscv_isa_has_feature.
	(struct riscv_call_info::riscv_call_info): Get xlen and flen from
	abi details, not isa details.
	(struct riscv_call_info::xlen): Update comment.
	(riscv_push_dummy_call): Update to call riscv_abi_any_float_p.
	(riscv_gdbarch_init): Update due to changes in gdbarch_tdep
	structure.
	* riscv-tdep.h (struct gdbarch_tdep): Update comments, and move
	features bit-field into abi sub-struct.

2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_is_fp_regno_p): New function.
	(riscv_register_reggroup_p): Use new function, remove unneeded
	parenthesis.
	(riscv_push_dummy_call): Extend assert to compare against xlen or
	flen based on register type.

2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_print_arg_location): Use TYPE_SAFE_NAME.

2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.c (riscv_register_name): Only return names for actual
	CSR register numbers, return NULL for anything else.

2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>

	* riscv-tdep.h: Number CSRs from the first CSR number, not from
	the last FP register.

2018-02-13  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.tgt: Add libsim.a as a dependency for riscv.

2018-03-14  Tom Tromey  <tom@tromey.com>

	PR cli/14977: